@@ -12,3 +12,4 @@
 *.o
 *.a
 mkmf.log
+examples/bin/Gemfile.lock
