@@ -3,6 +3,7 @@
 Release date: 2 Oct 2014
 
 * Introduce a cropping process.
+* Implemented resize_to_height.
 * Reworked the way we pass loading options to the image reader. If you want
 to enable sequential reading you have to explicitly call `sequential` before
 manipulating it. That will set @_load_opts[:sequential] = true for jpegs and
@@ -13,6 +14,7 @@ pngs. More loading options (like shrink on load) could be added afterwards.
 Release date: 27 Sep 2014
 
 * Implemented versions
+* Implemented resize_to_width.
 
 # v0.0.1
 
